[kfilewidget] Pass escaped filter string to KFileFilterCombo

It expects slashes to be escaped, so don't remove the escaping before passing it.

BUG: 463309